Dicer control Added

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
             <div class="panel-body" id="panelInfo">
                 <table id="dicerInfo" class="table table-striped table-condensed">
                     <tr>
-                        <th width="20%">Move1</th>
+                        <th width="20%">Move</th>
                         <th width="35%">Type</th>
                         <th width="30%">Attack</th>
                         <th width="15%">Delete</th>
@@ -89,9 +89,9 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group form-group-sm">
+                        <div id="control_button" class="form-group form-group-sm">
                             <input type="button" class="form-control btn-default btn-sm" id="inputStartButton" value="Start">
-                            <input type="button" class="form-control btn-default btn-sm" id="inputMoveButton" value="Move">
+                            <!--input type="button" class="form-control btn-default btn-sm" id="inputMoveButton" value="Move"-->
                         </div>
                     </div>
                 </div>
